# Abstract-Class_Hello-World

./: CMakeLists.txt  README.md
apps/: hello_world.cpp
libs/HelloWorld/: CMakeLists.txt
libs/HelloWorld/private/: hello_world.cpp
libs/HelloWorld/public/: hello_world.hpp
libs/Printables/: CMakeLists.txt
libs/Printables/private/: printables.cpp
libs/Printables/public/: printables.hpp
